# tp1

./: CMakeLists.txt  README.md  appveyor.yml  generateStudent  helloteapot.cpp  moreteapots.cpp  readme.html
.github/workflows/: continuous-integration.yml
